openclaw/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclaw
  namespace: openclaw
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: openclaw
  template:
    metadata:
      labels:
        app: openclaw
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: openclaw
          image: ghcr.io/openclaw/openclaw:latest #slim
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 18789
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: 2Gi
              cpu: "1"   
            requests:
              memory: 512Mi
              cpu: 250m
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: openclaw-home
              mountPath: /home/node/.openclaw
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - name: tmp
          emptyDir: {}
        - name: openclaw-home
          emptyDir: {}
        - name: config
          configMap:
            name: openclaw-config
