openclaw/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openclaw
  namespace: openclaw
spec:
  selector:
    app: openclaw

  ports:
    - port: 80
      targetPort: 3000
